test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/return_void_as_pointer.plx
pub fn x(none) *any {
    #  you can't implicitly convert a void expression to another type
    return cast<none>(0)
}

